# model-serving-tests

./: README.md  pyproject.toml  pytest.ini
model_serving_tests/: README.md
model_serving_tests/endpoint_utility/: grpc_utility.py  openai_utility.py
model_serving_tests/endpoint_utility/utils/: generation_pb2.py  generation_pb2_grpc.py
model_serving_tests/model_config/model_inference/elyza-japanese-llama-2-7b-instruct/: elyza-japanese-llama-2-7b-instruct.yaml
model_serving_tests/model_config/model_inference/granite-2b-instruct-4k/: granite-2b-instruct-4k.yaml
model_serving_tests/model_config/model_inference/granite-3-0-8b-instruct-gptq/: granite-3-0-8b-instruct-gptq.yaml
model_serving_tests/model_config/model_inference/granite-3b-code-instruct/: granite-3b-code-instruct.yaml
model_serving_tests/model_config/model_inference/granite-7b-lab-gguf/: granite-7b-lab-gguf.yaml
model_serving_tests/model_config/model_inference/granite-8b-instruct-4k/: granite-8b-instruct-4k.yaml
model_serving_tests/model_config/model_inference/llama-2-7b-chat-gptq/: llama-2-7b-chat-gptq.yaml
model_serving_tests/model_config/model_inference/meta-llama-31-8b/: meta-llama-31-8b.yaml
model_serving_tests/model_config/model_inference/openhermes-25-mistral-7b-awq/: openhermes-25-mistral-7b-awq.yaml
model_serving_tests/model_config/runtimes/vLLM/: serving_runtime.yaml
model_serving_tests/storage_config/: s3_seceret.yaml
model_serving_tests/tests/: conftest.py  constant.py  utils.py
model_serving_tests/tests/model_deployment/: test_elyza-japanese-llama-2-7b-instruct.py  test_granite_2b_instruct_preview_4k_r240917a.py  test_granite_3b_code_instruct.py  test_granite_8b_instruct_preview_4k_r240917a.py  test_meta_llama_3_1_8b.py
model_serving_tests/tests/model_deployment/__snapshots__/test_elyza-japanese-llama-2-7b-instruct/: test_elyza_japanese_llama_2_7b_simple[elyza-japanese-llama-2-7b-instruct-RawDeployment].json
model_serving_tests/tests/model_deployment/__snapshots__/test_granite_2b_instruct_preview_4k_r240917a/: test_granite_2b_instruct_4k_multi_gpu[granite-2b-instruct-4k-RawDeployment].2.json  test_granite_2b_instruct_4k_multi_gpu[granite-2b-instruct-4k-RawDeployment].json  test_granite_2b_instruct_4k_simple[granite-2b-instruct-4k-RawDeployment].2.json  test_granite_2b_instruct_4k_simple[granite-2b-instruct-4k-RawDeployment].3.json  test_granite_2b_instruct_4k_simple[granite-2b-instruct-4k-RawDeployment].4.json  test_granite_2b_instruct_4k_simple[granite-2b-instruct-4k-RawDeployment].json  test_granite_2b_instruct_4k_simple[granite-2b-instruct-4k-Serverless].1.json  test_granite_2b_instruct_4k_simple[granite-2b-instruct-4k-Serverless].json
model_serving_tests/tests/model_deployment/__snapshots__/test_granite_3b_code_instruct/: test_granite_3b_instruct_multi_gpu[granite-3b-code-instruct-RawDeployment].2.json
model_serving_tests/tests/model_deployment/__snapshots__/test_granite_8b_instruct_preview_4k_r240917a/: test_granite_8b_instruct_4k_multi_gpu[granite-8b-instruct-4k-RawDeployment].2.json  test_granite_8b_instruct_4k_multi_gpu[granite-8b-instruct-4k-RawDeployment].json  test_granite_8b_instruct_4k_simple[granite-8b-instruct-4k-RawDeployment].2.json  test_granite_8b_instruct_4k_simple[granite-8b-instruct-4k-RawDeployment].3.json  test_granite_8b_instruct_4k_simple[granite-8b-instruct-4k-RawDeployment].4.json  test_granite_8b_instruct_4k_simple[granite-8b-instruct-4k-RawDeployment].json
model_serving_tests/tests/model_deployment/__snapshots__/test_meta_llama_3_1_8b/: test_meta_llama_3_1_8b_multi_gpu[meta-llama-31-8b-RawDeployment].2.json  test_meta_llama_3_1_8b_multi_gpu[meta-llama-31-8b-RawDeployment].3.json  test_meta_llama_3_1_8b_multi_gpu[meta-llama-31-8b-RawDeployment].4.json  test_meta_llama_3_1_8b_multi_gpu[meta-llama-31-8b-RawDeployment].json  test_meta_llama_3_1_8b_simple[meta-llama-31-8b-RawDeployment].2.json  test_meta_llama_3_1_8b_simple[meta-llama-31-8b-RawDeployment].4.json  test_meta_llama_3_1_8b_simple[meta-llama-31-8b-RawDeployment].json
model_serving_tests/tests/quantization/: test_awq.py  test_gguf.py  test_gptq.py  test_granite2_8b_gptq.py
model_serving_tests/tests/vllm_single_deployment/: test_elyza-japanese-llama-2-7b-instruct.py
(+52 files in other folders)
